--- a/ansible.cfg
+++ b/ansible.cfg
@@ -9,6 +9,7 @@ library = ansible-avd/library
 collections_paths = ~/.ansible/collections:./ansible-cvp:./ansible-avd:../ansible-cvp:../ansible-avd:/usr/share/ansible/collections
 action_plugins = /usr/lib/python2.7/site-packages/napalm_ansible/plugins/action
 jinja2_extensions =  jinja2.ext.loopcontrols,jinja2.ext.do,jinja2.ext.i18n
+duplicate_dict_key=error
 # enable the YAML callback plugin.
 stdout_callback = yaml
 # enable the stdout_callback when running ad-hoc commands.
