--- a/inventory/intended/configs/ENT-DC1-BORDER1.cfg
+++ b/inventory/intended/configs/ENT-DC1-BORDER1.cfg
@@ -63,6 +63,16 @@ username dcapetz ssh-key ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDZ148VUrWGE12gbl/
 !
 clock timezone US/Central
 !
+vlan 10
+   name CORP_DC1_SHARED
+!
+vlan 20
+   name CORP_DC1_SHARED
+!
+vlan 3009
+   name MLAG_iBGP_CORP
+   trunk group LEAF_PEER_L3
+!
 vlan 4093
    name LEAF_PEER_L3
    trunk group LEAF_PEER_L3
@@ -71,13 +81,14 @@ vlan 4094
    name MLAG_PEER
    trunk group MLAG
 !
+vrf instance CORP
+!
 vrf instance management
 !
 interface Port-Channel551
    description MLAG_PEER_ENT-DC1-BORDER2_Po551
    no shutdown
    switchport
-   switchport trunk allowed vlan 2-4094
    switchport mode trunk
    switchport trunk group LEAF_PEER_L3
    switchport trunk group MLAG
@@ -95,6 +106,22 @@ interface Ethernet50/1
    mtu 1500
    no switchport
    ip address 10.1.0.123/31
+!
+interface Ethernet51/1
+   description P2P_LINK_TO_ENT-DC1-CORE1_Ethernet51/1
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address 10.0.11.1/31
+   sflow enable
+!
+interface Ethernet52/1
+   description P2P_LINK_TO_ENT-DC1-CORE2_Ethernet51/1
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address 10.0.12.1/31
+   sflow enable
 !
 interface Ethernet55/1
    description MLAG_PEER_ENT-DC1-BORDER2_Ethernet55/1
@@ -116,11 +143,36 @@ interface Loopback1
    no shutdown
    ip address 10.1.102.31/32
 !
+interface Loopback10
+   description CORP_VTEP_DIAGNOSTICS
+   no shutdown
+   vrf CORP
+   ip address 10.255.10.31/32
+!
 interface Management1
    description oob_management
    no shutdown
    vrf management
    ip address 10.99.99.55/24
+!
+interface Vlan10
+   description CORP_DC1_SHARED
+   no shutdown
+   vrf CORP
+   ip address virtual 10.10.10.1/24
+!
+interface Vlan20
+   description CORP_DC1_SHARED
+   no shutdown
+   vrf CORP
+   ip address virtual 10.20.20.1/24
+!
+interface Vlan3009
+   description MLAG_PEER_L3_iBGP: vrf CORP
+   no shutdown
+   mtu 1500
+   vrf CORP
+   ip address 10.255.251.60/31
 !
 interface Vlan4093
    description MLAG_PEER_L3_PEERING
@@ -140,15 +192,21 @@ interface Vxlan1
    vxlan source-interface Loopback1
    vxlan virtual-router encapsulation mac-address mlag-system-id
    vxlan udp-port 4789
+   vxlan vlan 10 vni 10010
+   vxlan vlan 20 vni 10020
+   vxlan vrf CORP vni 10
 !
 mac address-table aging-time 1300
 !
 ip virtual-router mac-address 00:1c:73:00:00:01
 !
+ip address virtual source-nat vrf CORP address 10.255.10.31
+!
 ip access-list standard SNMP-ACL
    10 permit 10.0.0.0/8
 !
 ip routing
+ip routing vrf CORP
 no ip routing vrf management
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
@@ -156,7 +214,7 @@ ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 20 permit 10.1.102.0/24 eq 32
 !
 mlag configuration
-   domain-id DC1_BORDER_LEAFS
+   domain-id DC1_BORDER_LEAVES
    local-interface Vlan4094
    peer-address 10.255.255.61
    peer-link Port-Channel551
@@ -179,11 +237,17 @@ router bfd
 !
 router bgp 65116
    router-id 10.1.101.31
+   maximum-paths 4 ecmp 4
    no bgp default ipv4-unicast
    distance bgp 20 200 200
    graceful-restart restart-time 300
    graceful-restart
-   maximum-paths 4 ecmp 4
+   neighbor EVPN-OVERLAY-CORE peer group
+   neighbor EVPN-OVERLAY-CORE update-source Loopback0
+   neighbor EVPN-OVERLAY-CORE bfd
+   neighbor EVPN-OVERLAY-CORE ebgp-multihop 15
+   neighbor EVPN-OVERLAY-CORE send-community
+   neighbor EVPN-OVERLAY-CORE maximum-routes 0
    neighbor EVPN-OVERLAY-PEERS peer group
    neighbor EVPN-OVERLAY-PEERS update-source Loopback0
    neighbor EVPN-OVERLAY-PEERS bfd
@@ -200,29 +264,67 @@ router bgp 65116
    neighbor MLAG-IPv4-UNDERLAY-PEER send-community
    neighbor MLAG-IPv4-UNDERLAY-PEER maximum-routes 12000
    neighbor MLAG-IPv4-UNDERLAY-PEER route-map RM-MLAG-PEER-IN in
+   neighbor 10.0.11.0 peer group IPv4-UNDERLAY-PEERS
+   neighbor 10.0.11.0 remote-as 64991
+   neighbor 10.0.11.0 description ENT-DC1-CORE1
+   neighbor 10.0.12.0 peer group IPv4-UNDERLAY-PEERS
+   neighbor 10.0.12.0 remote-as 64991
+   neighbor 10.0.12.0 description ENT-DC1-CORE2
    neighbor 10.1.0.120 peer group IPv4-UNDERLAY-PEERS
-   neighbor 10.1.0.120 remote-as 65001
+   neighbor 10.1.0.120 remote-as 65100
    neighbor 10.1.0.120 description ENT-DC1-SPINE1_Ethernet7/1
    neighbor 10.1.0.122 peer group IPv4-UNDERLAY-PEERS
-   neighbor 10.1.0.122 remote-as 65001
+   neighbor 10.1.0.122 remote-as 65100
    neighbor 10.1.0.122 description ENT-DC1-SPINE2_Ethernet7/1
    neighbor 10.1.100.1 peer group EVPN-OVERLAY-PEERS
-   neighbor 10.1.100.1 remote-as 65001
+   neighbor 10.1.100.1 remote-as 65100
    neighbor 10.1.100.1 description ENT-DC1-SPINE1
    neighbor 10.1.100.2 peer group EVPN-OVERLAY-PEERS
-   neighbor 10.1.100.2 remote-as 65001
+   neighbor 10.1.100.2 remote-as 65100
    neighbor 10.1.100.2 description ENT-DC1-SPINE2
+   neighbor 10.2.101.31 peer group EVPN-OVERLAY-CORE
+   neighbor 10.2.101.31 remote-as 65216
+   neighbor 10.2.101.31 description ENT-DC2-BORDER1
+   neighbor 10.2.101.32 peer group EVPN-OVERLAY-CORE
+   neighbor 10.2.101.32 remote-as 65216
+   neighbor 10.2.101.32 description ENT-DC2-BORDER2
    neighbor 10.255.251.61 peer group MLAG-IPv4-UNDERLAY-PEER
    neighbor 10.255.251.61 description ENT-DC1-BORDER2
    redistribute connected route-map RM-CONN-2-BGP
    !
+   vlan 10
+      rd 10.1.101.31:10010
+      rd evpn domain remote 10.1.101.31:10010
+      route-target both 10010:10010
+      route-target import export evpn domain remote 10010:10010
+      redistribute learned
+   !
+   vlan 20
+      rd 10.1.101.31:10020
+      rd evpn domain remote 10.1.101.31:10020
+      route-target both 10020:10020
+      route-target import export evpn domain remote 10020:10020
+      redistribute learned
+   !
    address-family evpn
+      neighbor EVPN-OVERLAY-CORE activate
+      neighbor EVPN-OVERLAY-CORE domain remote
       neighbor EVPN-OVERLAY-PEERS activate
+      neighbor default next-hop-self received-evpn-routes route-type ip-prefix inter-domain
    !
    address-family ipv4
+      no neighbor EVPN-OVERLAY-CORE activate
       no neighbor EVPN-OVERLAY-PEERS activate
       neighbor IPv4-UNDERLAY-PEERS activate
       neighbor MLAG-IPv4-UNDERLAY-PEER activate
+   !
+   vrf CORP
+      rd 10.1.101.31:10
+      route-target import evpn 10:10
+      route-target export evpn 10:10
+      router-id 10.1.101.31
+      neighbor 10.255.251.61 peer group MLAG-IPv4-UNDERLAY-PEER
+      redistribute connected
 !
 ip tacacs vrf management source-interface Management1
 !
