--- a/inventory/intended/configs/ENT-DC1-LEAF3.cfg
+++ b/inventory/intended/configs/ENT-DC1-LEAF3.cfg
@@ -63,6 +63,12 @@ username dcapetz ssh-key ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDZ148VUrWGE12gbl/
 !
 clock timezone US/Central
 !
+vlan 10
+   name CORP_DC1_SHARED
+!
+vlan 20
+   name CORP_DC1_SHARED
+!
 vlan 110
    name CORP_DC1_SHARED
 !
@@ -86,7 +92,7 @@ vrf instance CORP
 vrf instance management
 !
 interface Port-Channel1
-   description ENT-DC1-HOST2_PortChannel101
+   description ENT-DC1-HOST2_PortChannel1
    no shutdown
    switchport
    switchport trunk allowed vlan 10,20,110,112
@@ -99,7 +105,6 @@ interface Port-Channel551
    description MLAG_PEER_ENT-DC1-LEAF4_Po551
    no shutdown
    switchport
-   switchport trunk allowed vlan 2-4094
    switchport mode trunk
    switchport trunk group LEAF_PEER_L3
    switchport trunk group MLAG
@@ -155,6 +160,18 @@ interface Management1
    vrf management
    ip address 10.99.99.45/24
 !
+interface Vlan10
+   description CORP_DC1_SHARED
+   no shutdown
+   vrf CORP
+   ip address virtual 10.10.10.1/24
+!
+interface Vlan20
+   description CORP_DC1_SHARED
+   no shutdown
+   vrf CORP
+   ip address virtual 10.20.20.1/24
+!
 interface Vlan110
    description CORP_DC1_SHARED
    no shutdown
@@ -192,6 +209,8 @@ interface Vxlan1
    vxlan source-interface Loopback1
    vxlan virtual-router encapsulation mac-address mlag-system-id
    vxlan udp-port 4789
+   vxlan vlan 10 vni 10010
+   vxlan vlan 20 vni 10020
    vxlan vlan 110 vni 10110
    vxlan vlan 112 vni 10112
    vxlan vrf CORP vni 10
@@ -237,11 +256,11 @@ router bfd
 !
 router bgp 65102
    router-id 10.1.101.3
+   maximum-paths 4 ecmp 4
    no bgp default ipv4-unicast
    distance bgp 20 200 200
    graceful-restart restart-time 300
    graceful-restart
-   maximum-paths 4 ecmp 4
    neighbor EVPN-OVERLAY-PEERS peer group
    neighbor EVPN-OVERLAY-PEERS update-source Loopback0
    neighbor EVPN-OVERLAY-PEERS bfd
@@ -259,20 +278,25 @@ router bgp 65102
    neighbor MLAG-IPv4-UNDERLAY-PEER maximum-routes 12000
    neighbor MLAG-IPv4-UNDERLAY-PEER route-map RM-MLAG-PEER-IN in
    neighbor 10.1.0.8 peer group IPv4-UNDERLAY-PEERS
-   neighbor 10.1.0.8 remote-as 65001
+   neighbor 10.1.0.8 remote-as 65100
    neighbor 10.1.0.8 description ENT-DC1-SPINE1_Ethernet3/1
    neighbor 10.1.0.10 peer group IPv4-UNDERLAY-PEERS
-   neighbor 10.1.0.10 remote-as 65001
+   neighbor 10.1.0.10 remote-as 65100
    neighbor 10.1.0.10 description ENT-DC1-SPINE2_Ethernet3/1
    neighbor 10.1.100.1 peer group EVPN-OVERLAY-PEERS
-   neighbor 10.1.100.1 remote-as 65001
+   neighbor 10.1.100.1 remote-as 65100
    neighbor 10.1.100.1 description ENT-DC1-SPINE1
    neighbor 10.1.100.2 peer group EVPN-OVERLAY-PEERS
-   neighbor 10.1.100.2 remote-as 65001
+   neighbor 10.1.100.2 remote-as 65100
    neighbor 10.1.100.2 description ENT-DC1-SPINE2
    neighbor 10.255.251.5 peer group MLAG-IPv4-UNDERLAY-PEER
    neighbor 10.255.251.5 description ENT-DC1-LEAF4
    redistribute connected route-map RM-CONN-2-BGP
+   !
+   vlan 10
+      rd 10.1.101.3:10010
+      route-target both 10010:10010
+      redistribute learned
    !
    vlan 110
       rd 10.1.101.3:10110
@@ -282,6 +306,11 @@ router bgp 65102
    vlan 112
       rd 10.1.101.3:10112
       route-target both 10112:10112
+      redistribute learned
+   !
+   vlan 20
+      rd 10.1.101.3:10020
+      route-target both 10020:10020
       redistribute learned
    !
    address-family evpn
