--- a/inventory/intended/structured_configs/cvp/cvp.yml
+++ b/inventory/intended/structured_configs/cvp/cvp.yml
@@ -1,11 +1,11 @@
 ---
-CVP_DEVICES:
+cvp_devices:
   - fqdn: ENT-DC1-BORDER1
-    parentContainerName: DC1_BORDER_LEAFS
+    parentContainerName: DC1_BORDER_LEAVES
     configlets:
       - AVD-L3LSV_ENT-DC1-BORDER1
   - fqdn: ENT-DC1-BORDER2
-    parentContainerName: DC1_BORDER_LEAFS
+    parentContainerName: DC1_BORDER_LEAVES
     configlets:
       - AVD-L3LSV_ENT-DC1-BORDER2
   - fqdn: ENT-DC1-LEAF1
@@ -40,11 +40,51 @@ CVP_DEVICES:
     parentContainerName: DC1_SPINES
     configlets:
       - AVD-L3LSV_ENT-DC1-SPINE2
-CVP_CONTAINERS:
-  DC1_BORDER_LEAFS:
+  - fqdn: ENT-DC2-BORDER1
+    parentContainerName: DC2_BORDER_LEAVES
+    configlets:
+      - AVD-L3LSV_ENT-DC2-BORDER1
+  - fqdn: ENT-DC2-BORDER2
+    parentContainerName: DC2_BORDER_LEAVES
+    configlets:
+      - AVD-L3LSV_ENT-DC2-BORDER2
+  - fqdn: ENT-DC2-LEAF1
+    parentContainerName: DC2_LEAF_DOMAIN_1
+    configlets:
+      - AVD-L3LSV_ENT-DC2-LEAF1
+  - fqdn: ENT-DC2-LEAF2
+    parentContainerName: DC2_LEAF_DOMAIN_1
+    configlets:
+      - AVD-L3LSV_ENT-DC2-LEAF2
+  - fqdn: ENT-DC2-LEAF3
+    parentContainerName: DC2_LEAF_DOMAIN_2
+    configlets:
+      - AVD-L3LSV_ENT-DC2-LEAF3
+  - fqdn: ENT-DC2-LEAF4
+    parentContainerName: DC2_LEAF_DOMAIN_2
+    configlets:
+      - AVD-L3LSV_ENT-DC2-LEAF4
+  - fqdn: ENT-DC2-LEAF5
+    parentContainerName: DC2_LEAF_DOMAIN_3
+    configlets:
+      - AVD-L3LSV_ENT-DC2-LEAF5
+  - fqdn: ENT-DC2-LEAF6
+    parentContainerName: DC2_LEAF_DOMAIN_3
+    configlets:
+      - AVD-L3LSV_ENT-DC2-LEAF6
+  - fqdn: ENT-DC2-SPINE1
+    parentContainerName: DC2_SPINES
+    configlets:
+      - AVD-L3LSV_ENT-DC2-SPINE1
+  - fqdn: ENT-DC2-SPINE2
+    parentContainerName: DC2_SPINES
+    configlets:
+      - AVD-L3LSV_ENT-DC2-SPINE2
+cvp_containers:
+  DC1:
+    parentContainerName: DC
+  DC1_BORDER_LEAVES:
     parentContainerName: DC1_LEAVES
-  DC1_FABRIC:
-    parentContainerName: Tenant
   DC1_LEAF_DOMAIN_1:
     parentContainerName: DC1_LEAVES
   DC1_LEAF_DOMAIN_2:
@@ -52,6 +92,22 @@ CVP_CONTAINERS:
   DC1_LEAF_DOMAIN_3:
     parentContainerName: DC1_LEAVES
   DC1_LEAVES:
-    parentContainerName: DC1_FABRIC
+    parentContainerName: DC1
   DC1_SPINES:
-    parentContainerName: DC1_FABRIC
+    parentContainerName: DC1
+  DC2:
+    parentContainerName: DC
+  DC2_BORDER_LEAVES:
+    parentContainerName: DC2_LEAVES
+  DC2_LEAF_DOMAIN_1:
+    parentContainerName: DC2_LEAVES
+  DC2_LEAF_DOMAIN_2:
+    parentContainerName: DC2_LEAVES
+  DC2_LEAF_DOMAIN_3:
+    parentContainerName: DC2_LEAVES
+  DC2_LEAVES:
+    parentContainerName: DC2
+  DC2_SPINES:
+    parentContainerName: DC2
+  DC:
+    parentContainerName: Tenant
