--- a/inventory/intended/configs/ENT-DC2-BORDER2.cfg
+++ b/inventory/intended/configs/ENT-DC2-BORDER2.cfg
@@ -214,7 +214,7 @@ ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 20 permit 10.2.102.0/24 eq 32
 !
 mlag configuration
-   domain-id DC2_BORDER_LEAVES
+   domain-id ENT-DC2-BORDER-LEAVES
    local-interface Vlan4094
    peer-address 10.255.255.60
    peer-link Port-Channel551
