--- a/inventory/group_vars/ENT-DC1-LEAVES.yml
+++ b/inventory/group_vars/ENT-DC1-LEAVES.yml
@@ -25,7 +25,7 @@ l3leaf:
       - 'graceful-restart'
     spanning_tree_mode: mstp
   node_groups:
-    DC1_LEAF_DOMAIN_1:
+    ENT-DC1-LEAF-DOMAIN-1:
       bgp_as: 65101
       nodes:
         ENT-DC1-LEAF1:
@@ -40,7 +40,7 @@ l3leaf:
           uplink_switch_interfaces: ['Ethernet2/1', 'Ethernet2/1']
           filter:
             tags: [ GLOBAL_LEAVES, DC1_COMPUTE_LEAVES, DC1_LEAF_DOMAIN_1 ]
-    DC1_LEAF_DOMAIN_2:
+    ENT-DC1-LEAF-DOMAIN-2:
       bgp_as: 65102
       nodes:
         ENT-DC1-LEAF3:
@@ -55,7 +55,7 @@ l3leaf:
           uplink_switch_interfaces: ['Ethernet4/1', 'Ethernet4/1']
           filter:
             tags: [ GLOBAL_LEAVES, DC1_COMPUTE_LEAVES, DC1_LEAF_DOMAIN_2 ]
-    DC1_LEAF_DOMAIN_3:
+    ENT-DC1-LEAF-DOMAIN-3:
       bgp_as: 65103
       nodes:
         ENT-DC1-LEAF5:
@@ -70,7 +70,7 @@ l3leaf:
           uplink_switch_interfaces: ['Ethernet6/1', 'Ethernet6/1']
           filter:
             tags: [ GLOBAL_LEAVES, DC1_COMPUTE_LEAVES, DC1_LEAF_DOMAIN_3 ]
-    DC1_BORDER_LEAVES:
+    ENT-DC1-BORDER-LEAVES:
       bgp_as: 65116
       evpn_gateway:
         evpn_l2:
