--- a/inventory/intended/configs/ENT-DC1-LEAF1.cfg
+++ b/inventory/intended/configs/ENT-DC1-LEAF1.cfg
@@ -233,7 +233,7 @@ ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 20 permit 10.1.102.0/24 eq 32
 !
 mlag configuration
-   domain-id DC1_LEAF_DOMAIN_1
+   domain-id ENT-DC1-LEAF-DOMAIN-1
    local-interface Vlan4094
    peer-address 10.255.255.1
    peer-link Port-Channel551
