--- a/inventory/intended/configs/ENT-DC1-LEAF3.cfg
+++ b/inventory/intended/configs/ENT-DC1-LEAF3.cfg
@@ -233,7 +233,7 @@ ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 20 permit 10.1.102.0/24 eq 32
 !
 mlag configuration
-   domain-id DC1_LEAF_DOMAIN_2
+   domain-id ENT-DC1-LEAF-DOMAIN-2
    local-interface Vlan4094
    peer-address 10.255.255.5
    peer-link Port-Channel551
