--- a/inventory/intended/structured_configs/cvp/cvp.yml
+++ b/inventory/intended/structured_configs/cvp/cvp.yml
@@ -1,113 +1,113 @@
 ---
 cvp_devices:
   - fqdn: ENT-DC1-BORDER1
-    parentContainerName: DC1_BORDER_LEAVES
+    parentContainerName: ENT-DC1-BORDER-LEAVES
     configlets:
       - AVD-L3LSV_ENT-DC1-BORDER1
   - fqdn: ENT-DC1-BORDER2
-    parentContainerName: DC1_BORDER_LEAVES
+    parentContainerName: ENT-DC1-BORDER-LEAVES
     configlets:
       - AVD-L3LSV_ENT-DC1-BORDER2
   - fqdn: ENT-DC1-LEAF1
-    parentContainerName: DC1_LEAF_DOMAIN_1
+    parentContainerName: ENT-DC1-LEAF-DOMAIN-1
     configlets:
       - AVD-L3LSV_ENT-DC1-LEAF1
   - fqdn: ENT-DC1-LEAF2
-    parentContainerName: DC1_LEAF_DOMAIN_1
+    parentContainerName: ENT-DC1-LEAF-DOMAIN-1
     configlets:
       - AVD-L3LSV_ENT-DC1-LEAF2
   - fqdn: ENT-DC1-LEAF3
-    parentContainerName: DC1_LEAF_DOMAIN_2
+    parentContainerName: ENT-DC1-LEAF-DOMAIN-2
     configlets:
       - AVD-L3LSV_ENT-DC1-LEAF3
   - fqdn: ENT-DC1-LEAF4
-    parentContainerName: DC1_LEAF_DOMAIN_2
+    parentContainerName: ENT-DC1-LEAF-DOMAIN-2
     configlets:
       - AVD-L3LSV_ENT-DC1-LEAF4
   - fqdn: ENT-DC1-LEAF5
-    parentContainerName: DC1_LEAF_DOMAIN_3
+    parentContainerName: ENT-DC1-LEAF-DOMAIN-3
     configlets:
       - AVD-L3LSV_ENT-DC1-LEAF5
   - fqdn: ENT-DC1-LEAF6
-    parentContainerName: DC1_LEAF_DOMAIN_3
+    parentContainerName: ENT-DC1-LEAF-DOMAIN-3
     configlets:
       - AVD-L3LSV_ENT-DC1-LEAF6
   - fqdn: ENT-DC1-SPINE1
-    parentContainerName: DC1_SPINES
+    parentContainerName: ENT-DC1-SPINES
     configlets:
       - AVD-L3LSV_ENT-DC1-SPINE1
   - fqdn: ENT-DC1-SPINE2
-    parentContainerName: DC1_SPINES
+    parentContainerName: ENT-DC1-SPINES
     configlets:
       - AVD-L3LSV_ENT-DC1-SPINE2
   - fqdn: ENT-DC2-BORDER1
-    parentContainerName: DC2_BORDER_LEAVES
+    parentContainerName: ENT-DC2-BORDER-LEAVES
     configlets:
       - AVD-L3LSV_ENT-DC2-BORDER1
   - fqdn: ENT-DC2-BORDER2
-    parentContainerName: DC2_BORDER_LEAVES
+    parentContainerName: ENT-DC2-BORDER-LEAVES
     configlets:
       - AVD-L3LSV_ENT-DC2-BORDER2
   - fqdn: ENT-DC2-LEAF1
-    parentContainerName: DC2_LEAF_DOMAIN_1
+    parentContainerName: ENT-DC2-LEAF-DOMAIN-1
     configlets:
       - AVD-L3LSV_ENT-DC2-LEAF1
   - fqdn: ENT-DC2-LEAF2
-    parentContainerName: DC2_LEAF_DOMAIN_1
+    parentContainerName: ENT-DC2-LEAF-DOMAIN-1
     configlets:
       - AVD-L3LSV_ENT-DC2-LEAF2
   - fqdn: ENT-DC2-LEAF3
-    parentContainerName: DC2_LEAF_DOMAIN_2
+    parentContainerName: ENT-DC2-LEAF-DOMAIN-2
     configlets:
       - AVD-L3LSV_ENT-DC2-LEAF3
   - fqdn: ENT-DC2-LEAF4
-    parentContainerName: DC2_LEAF_DOMAIN_2
+    parentContainerName: ENT-DC2-LEAF-DOMAIN-2
     configlets:
       - AVD-L3LSV_ENT-DC2-LEAF4
   - fqdn: ENT-DC2-LEAF5
-    parentContainerName: DC2_LEAF_DOMAIN_3
+    parentContainerName: ENT-DC2-LEAF-DOMAIN-3
     configlets:
       - AVD-L3LSV_ENT-DC2-LEAF5
   - fqdn: ENT-DC2-LEAF6
-    parentContainerName: DC2_LEAF_DOMAIN_3
+    parentContainerName: ENT-DC2-LEAF-DOMAIN-3
     configlets:
       - AVD-L3LSV_ENT-DC2-LEAF6
   - fqdn: ENT-DC2-SPINE1
-    parentContainerName: DC2_SPINES
+    parentContainerName: ENT-DC2-SPINES
     configlets:
       - AVD-L3LSV_ENT-DC2-SPINE1
   - fqdn: ENT-DC2-SPINE2
-    parentContainerName: DC2_SPINES
+    parentContainerName: ENT-DC2-SPINES
     configlets:
       - AVD-L3LSV_ENT-DC2-SPINE2
 cvp_containers:
-  DC1:
-    parentContainerName: DC
-  DC1_BORDER_LEAVES:
-    parentContainerName: DC1_LEAVES
-  DC1_LEAF_DOMAIN_1:
-    parentContainerName: DC1_LEAVES
-  DC1_LEAF_DOMAIN_2:
-    parentContainerName: DC1_LEAVES
-  DC1_LEAF_DOMAIN_3:
-    parentContainerName: DC1_LEAVES
-  DC1_LEAVES:
-    parentContainerName: DC1
-  DC1_SPINES:
-    parentContainerName: DC1
-  DC2:
-    parentContainerName: DC
-  DC2_BORDER_LEAVES:
-    parentContainerName: DC2_LEAVES
-  DC2_LEAF_DOMAIN_1:
-    parentContainerName: DC2_LEAVES
-  DC2_LEAF_DOMAIN_2:
-    parentContainerName: DC2_LEAVES
-  DC2_LEAF_DOMAIN_3:
-    parentContainerName: DC2_LEAVES
-  DC2_LEAVES:
-    parentContainerName: DC2
-  DC2_SPINES:
-    parentContainerName: DC2
-  DC:
+  ENT-DC1:
+    parentContainerName: ENTERPRISE-DC
+  ENT-DC1-BORDER-LEAVES:
+    parentContainerName: ENT-DC1-LEAVES
+  ENT-DC1-LEAF-DOMAIN-1:
+    parentContainerName: ENT-DC1-LEAVES
+  ENT-DC1-LEAF-DOMAIN-2:
+    parentContainerName: ENT-DC1-LEAVES
+  ENT-DC1-LEAF-DOMAIN-3:
+    parentContainerName: ENT-DC1-LEAVES
+  ENT-DC1-LEAVES:
+    parentContainerName: ENT-DC1
+  ENT-DC1-SPINES:
+    parentContainerName: ENT-DC1
+  ENT-DC2:
+    parentContainerName: ENTERPRISE-DC
+  ENT-DC2-BORDER-LEAVES:
+    parentContainerName: ENT-DC2-LEAVES
+  ENT-DC2-LEAF-DOMAIN-1:
+    parentContainerName: ENT-DC2-LEAVES
+  ENT-DC2-LEAF-DOMAIN-2:
+    parentContainerName: ENT-DC2-LEAVES
+  ENT-DC2-LEAF-DOMAIN-3:
+    parentContainerName: ENT-DC2-LEAVES
+  ENT-DC2-LEAVES:
+    parentContainerName: ENT-DC2
+  ENT-DC2-SPINES:
+    parentContainerName: ENT-DC2
+  ENTERPRISE-DC:
     parentContainerName: Tenant
