--- a/inventory/group_vars/TENANT-NETWORKS.yml
+++ b/inventory/group_vars/TENANT-NETWORKS.yml
@@ -41,11 +41,11 @@ tenants:
             tags: [DC1_LEAF_DOMAIN_2]
             enabled: true
             ip_address_virtual: 10.112.112.1/24
-          - id: 113
-            name: CORP_DC1_RACK3
-            tags: [DC1_LEAF_DOMAIN_3]
-            enabled: true
-            ip_address_virtual: 10.113.113.1/24
+#          - id: 113
+#            name: CORP_DC1_RACK3
+#            tags: [DC1_LEAF_DOMAIN_3]
+#            enabled: true
+#            ip_address_virtual: 10.113.113.1/24
           - id: 210
             name: CORP_DC2_SHARED
             tags: [DC2_COMPUTE_LEAVES]
@@ -61,11 +61,11 @@ tenants:
             tags: [DC2_LEAF_DOMAIN_2]
             enabled: true
             ip_address_virtual: 10.212.212.1/24
-          - id: 213
-            name: CORP_DC2_RACK3
-            tags: [DC2_LEAF_DOMAIN_3]
-            enabled: true
-            ip_address_virtual: 10.213.213.1/24
+#          - id: 213
+#            name: CORP_DC2_RACK3
+#            tags: [DC2_LEAF_DOMAIN_3]
+#            enabled: true
+#            ip_address_virtual: 10.213.213.1/24
 #        # WAN Peering Config to Border Leaves
 #        l3_interfaces:
 #          - interfaces: [ Ethernet1 ]
@@ -104,46 +104,6 @@ tenants:
 #            interface: Ethernet51/1.110
 #            nodes: [ DC-BORDER2 ]
 #        redistribute_static: true
-#      Tenant_10_WEB_Zone:
-#        vrf_vni: 11
-#        vtep_diagnostic:
-#          loopback: 11
-#          loopback_ip_range: 10.255.11.0/24
-#        svis:
-#          12:
-#            name: Tenant_10_WEB_Zone_1
-#            tags: [compute]
-#            enabled: true
-#            ip_address_virtual: 10.10.12.1/24
-#          13:
-#            name: Tenant_10_WEB_Zone_2
-#            tags: [compute]
-#            enabled: true
-#            ip_address_virtual: 10.10.13.1/24
-#          18:
-#            name: Tenant_10_WEB_Zone_FW
-#            tags: [border]
-#            enabled: true
-#            ip_virtual_router_addresses:
-#              - 10.10.18.1
-#            nodes:
-#              DC-BORDER1:
-#                ip_address: 10.10.18.2/24
-#              DC-BORDER2:
-#                ip_address: 10.10.18.3/24
-#        l3_interfaces:
-#          - interfaces: [ Ethernet51/1.110 ]
-#            encapsulation_dot1q_vlan: [ 110 ]
-#            ip_addresses: [ 192.168.110.0/31 ]
-#            nodes: [ DC-BORDER1 ]
-#            description: L3 Uplink to WAN for CORP VRF
-#            enabled: true
-#          - interfaces: [ Ethernet51/1.110 ]
-#            encapsulation_dot1q_vlan: [ 110 ]
-#            ip_addresses: [ 192.168.110.2/31 ]
-#            nodes: [ DC-BORDER2 ]
-#            description: L3 Uplink to WAN for CORP VRF
-#            enabled: true
 #    l2vlans:
 #      14:
 #        name: Tenant_10_VMOTION
@@ -158,16 +118,6 @@ tenants:
 #          loopback: 20
 #          loopback_ip_range: 10.255.20.0/24
 #        svis:
-#          20:
-#            name: Tenant_20_OP_Zone_1
-#            tags: [compute]
-#            enabled: true
-#            ip_address_virtual: 10.20.20.0/24
-#          21:
-#            name: Tenant_20_OP_Zone_2
-#            tags: [compute]
-#            enabled: true
-#            ip_address_virtual: 10.20.21.1/24
 #          29:
 #            name: Tenant_20_OP_Zone_FW
 #            tags: [border]
