--- a/inventory/inventory.yml
+++ b/inventory/inventory.yml
@@ -23,10 +23,10 @@ all:
                   hosts:
                     ENT-DC1-LEAF3:
                     ENT-DC1-LEAF4:
-                ENT-DC1-LEAF-DOMAIN-3:
-                  hosts:
-                    ENT-DC1-LEAF5:
-                    ENT-DC1-LEAF6:
+#                ENT-DC1-LEAF-DOMAIN-3:
+#                  hosts:
+#                    ENT-DC1-LEAF5:
+#                    ENT-DC1-LEAF6:
                 ENT-DC1-BORDER-LEAVES:
                   hosts:
                     ENT-DC1-BORDER1:
@@ -47,10 +47,10 @@ all:
                   hosts:
                     ENT-DC2-LEAF3:
                     ENT-DC2-LEAF4:
-                ENT-DC2-LEAF-DOMAIN-3:
-                  hosts:
-                    ENT-DC2-LEAF5:
-                    ENT-DC2-LEAF6:
+#                ENT-DC2-LEAF-DOMAIN-3:
+#                  hosts:
+#                    ENT-DC2-LEAF5:
+#                    ENT-DC2-LEAF6:
                 ENT-DC2-BORDER-LEAVES:
                   hosts:
                     ENT-DC2-BORDER1:
@@ -59,19 +59,19 @@ all:
       children:
         ENT-DC1-LEAF-DOMAIN-1:
         ENT-DC1-LEAF-DOMAIN-2:
-        ENT-DC1-LEAF-DOMAIN-3:
+#        ENT-DC1-LEAF-DOMAIN-3:
         ENT-DC1-BORDER-LEAVES:
         ENT-DC2-LEAF-DOMAIN-1:
         ENT-DC2-LEAF-DOMAIN-2:
-        ENT-DC2-LEAF-DOMAIN-3:
+#        ENT-DC2-LEAF-DOMAIN-3:
         ENT-DC2-BORDER-LEAVES:
     CONNECTED-ENDPOINTS:
       children:
         ENT-DC1-LEAF-DOMAIN-1:
         ENT-DC1-LEAF-DOMAIN-2:
-        ENT-DC1-LEAF-DOMAIN-3:
+#        ENT-DC1-LEAF-DOMAIN-3:
         ENT-DC1-BORDER-LEAVES:
         ENT-DC2-LEAF-DOMAIN-1:
         ENT-DC2-LEAF-DOMAIN-2:
-        ENT-DC2-LEAF-DOMAIN-3:
+#        ENT-DC2-LEAF-DOMAIN-3:
         ENT-DC2-BORDER-LEAVES:
