--- a/inventory/intended/structured_configs/ENT-DC2-LEAF3-debug-vars.yml
+++ b/inventory/intended/structured_configs/ENT-DC2-LEAF3-debug-vars.yml
@@ -2411,7 +2411,7 @@ groups:
   - ENT-DC2-LEAF4
   - ENT-DC2-BORDER1
   - ENT-DC2-BORDER2
-omit: __omit_place_holder__54a37dcc731db60c6d44c190c609091e87ffd4a2
+omit: __omit_place_holder__0926c1f54e8db149ee07f428b43eddf0898dcc2d
 ansible_version:
   string: 2.14.8
   full: 2.14.8
@@ -2425,5 +2425,5 @@ ansible_inventory_sources:
 - /workspaces/avd-demo/inventory/inventory.yml
 ansible_skip_tags: []
 ansible_run_tags:
-- build
+- provision
 ansible_verbosity: 0
