--- a/inventory/group_vars/ENT DC1 LEAVES.yml
+++ b/inventory/group_vars/ENT DC1 LEAVES.yml
@@ -10,14 +10,14 @@ l3leaf:
   defaults:
     platform: cEOSLab
     mgmt_interface: Management1
-    loopback_ipv4_pool: 10.2.101.0/24
-    vtep_loopback_ipv4_pool: 10.2.102.0/24
-    uplink_ipv4_pool: 10.2.0.0/23
+    loopback_ipv4_pool: 10.1.101.0/24
+    vtep_loopback_ipv4_pool: 10.1.102.0/24
+    uplink_ipv4_pool: 10.1.0.0/23
     uplink_interfaces: ['Ethernet49/1', 'Ethernet50/1']
-    uplink_switches: ['ENT-DC2-SPINE1', 'ENT-DC2-SPINE2']
+    uplink_switches: ['ENT-DC1-SPINE1', 'ENT-DC1-SPINE2']
     mlag_interfaces: [ Ethernet55/1, Ethernet56/1 ]
     mlag_peer_ipv4_pool: 10.255.255.0/24
-    mlag_peer_l3_ipv4_pool: 10.255.252.0/24
+    mlag_peer_l3_ipv4_pool: 10.255.251.0/24
     virtual_router_mac_address: 00:1c:73:00:00:01
     bgp_defaults:
       - 'distance bgp 20 200 200'
@@ -25,53 +25,53 @@ l3leaf:
       - 'graceful-restart'
     spanning_tree_mode: mstp
   node_groups:
-    ENT-DC2-LEAF-DOMAIN-1:
-      bgp_as: 65201
+    ENT DC1 LEAF DOMAIN 1:
+      bgp_as: 65101
       nodes:
-        ENT-DC2-LEAF1:
+        ENT-DC1-LEAF1:
           id: 1
-          mgmt_ip: 10.99.99.49/24
+          mgmt_ip: 10.99.99.43/24
           uplink_switch_interfaces: ['Ethernet1/1', 'Ethernet1/1']
           filter:
-            tags: [ GLOBAL_LEAVES, DC2_COMPUTE_LEAVES, DC2_LEAF_DOMAIN_1 ]
-        ENT-DC2-LEAF2:
+            tags: [ GLOBAL_LEAVES, DC1_COMPUTE_LEAVES, DC1_LEAF_DOMAIN_1 ]
+        ENT-DC1-LEAF2:
           id: 2
-          mgmt_ip: 10.99.99.50/24
+          mgmt_ip: 10.99.99.44/24
           uplink_switch_interfaces: ['Ethernet2/1', 'Ethernet2/1']
           filter:
-            tags: [ GLOBAL_LEAVES, DC2_COMPUTE_LEAVES, DC2_LEAF_DOMAIN_1 ]
-    ENT-DC2-LEAF-DOMAIN-2:
-      bgp_as: 65202
+            tags: [ GLOBAL_LEAVES, DC1_COMPUTE_LEAVES, DC1_LEAF_DOMAIN_1 ]
+    ENT DC1 LEAF DOMAIN 2:
+      bgp_as: 65102
       nodes:
-        ENT-DC2-LEAF3:
+        ENT-DC1-LEAF3:
           id: 3
-          mgmt_ip: 10.99.99.51/24
+          mgmt_ip: 10.99.99.45/24
           uplink_switch_interfaces: ['Ethernet3/1', 'Ethernet3/1']
           filter:
-            tags: [ GLOBAL_LEAVES, DC2_COMPUTE_LEAVES, DC2_LEAF_DOMAIN_2 ]
-        ENT-DC2-LEAF4:
+            tags: [ GLOBAL_LEAVES, DC1_COMPUTE_LEAVES, DC1_LEAF_DOMAIN_2 ]
+        ENT-DC1-LEAF4:
           id: 4
-          mgmt_ip: 10.99.99.52/24
+          mgmt_ip: 10.99.99.46/24
           uplink_switch_interfaces: ['Ethernet4/1', 'Ethernet4/1']
           filter:
-            tags: [ GLOBAL_LEAVES, DC2_COMPUTE_LEAVES, DC2_LEAF_DOMAIN_2 ]
-#    ENT-DC2-LEAF-DOMAIN-3:
-#      bgp_as: 65203
+            tags: [ GLOBAL_LEAVES, DC1_COMPUTE_LEAVES, DC1_LEAF_DOMAIN_2 ]
+#    ENT DC1 LEAF DOMAIN 3:
+#      bgp_as: 65103
 #      nodes:
-#        ENT-DC2-LEAF5:
+#        ENT-DC1-LEAF5:
 #          id: 5
-#          mgmt_ip: 10.99.99.53/24
+#          mgmt_ip: 10.99.99.47/24
 #          uplink_switch_interfaces: ['Ethernet5/1', 'Ethernet5/1']
 #          filter:
-#            tags: [ GLOBAL_LEAVES, DC2_COMPUTE_LEAVES, DC2_LEAF_DOMAIN_3 ]
-#        ENT-DC2-LEAF6:
+#            tags: [ GLOBAL_LEAVES, DC1_COMPUTE_LEAVES, DC1_LEAF_DOMAIN_3 ]
+#        ENT-DC1-LEAF6:
 #          id: 6
-#          mgmt_ip: 10.99.99.54/24
+#          mgmt_ip: 10.99.99.48/24
 #          uplink_switch_interfaces: ['Ethernet6/1', 'Ethernet6/1']
 #          filter:
-#            tags: [ GLOBAL_LEAVES, DC2_COMPUTE_LEAVES, DC2_LEAF_DOMAIN_3 ]
-    ENT-DC2-EDGE-LEAVES:
-      bgp_as: 65216
+#            tags: [ GLOBAL_LEAVES, DC1_COMPUTE_LEAVES, DC1_LEAF_DOMAIN_3 ]
+    ENT DC1 EDGE LEAVES:
+      bgp_as: 65116
       evpn_gateway:
         evpn_l2:
           enabled: true
@@ -79,78 +79,78 @@ l3leaf:
           enabled: true
           inter_domain: true
       nodes:
-        ENT-DC2-EDGE1:
+        ENT-DC1-EDGE1:
           id: 31
-          mgmt_ip: 10.99.99.57/24
+          mgmt_ip: 10.99.99.55/24
           uplink_switch_interfaces: ['Ethernet7/1', 'Ethernet7/1']
           evpn_gateway:
             remote_peers:
-              - hostname: ENT-DC1-EDGE1
-              - hostname: ENT-DC1-EDGE2
+              - hostname: ENT-DC2-EDGE1
+              - hostname: ENT-DC2-EDGE2
           filter:
-            tags: [ GLOBAL_LEAVES, DC2_EDGE_LEAVES ]
-        ENT-DC2-EDGE2:
+            tags: [ GLOBAL_LEAVES, DC1_EDGE_LEAVES ]
+        ENT-DC1-EDGE2:
           id: 32
-          mgmt_ip: 10.99.99.58/24
+          mgmt_ip: 10.99.99.56/24
           uplink_switch_interfaces: ['Ethernet8/1', 'Ethernet8/1']
           evpn_gateway:
             remote_peers:
-              - hostname: ENT-DC1-EDGE1
-              - hostname: ENT-DC1-EDGE2
+              - hostname: ENT-DC2-EDGE1
+              - hostname: ENT-DC2-EDGE2
           filter:
-            tags: [ GLOBAL_LEAVES, DC2_EDGE_LEAVES ]
+            tags: [ GLOBAL_LEAVES, DC1_EDGE_LEAVES ]
 # Uplink to Core Definition for Underlay
 l3_edge:
   p2p_links:
-    - nodes: [ ENT-DC2-EDGE1, ENT-DC2-CORE1 ]
+    - nodes: [ ENT-DC1-EDGE1, ENT-DC1-CORE1 ]
       interfaces:
         - Ethernet51/1
         - Ethernet51/1
       ip:
-        - 10.0.21.1/31
-        - 10.0.21.0/31
+        - 10.0.11.1/31
+        - 10.0.11.0/31
       as:
-        - '65216'
-        - '64992'
+        - '65116'
+        - '64991'
       include_in_underlay_protocol: true
       mtu: '9214'
       raw_eos_cli: 'sflow enable'
-    - nodes: [ ENT-DC2-EDGE1, ENT-DC2-CORE2 ]
+    - nodes: [ ENT-DC1-EDGE1, ENT-DC1-CORE2 ]
       interfaces:
         - Ethernet52/1
         - Ethernet51/1
       ip:
-        - 10.0.22.1/31
-        - 10.0.22.0/31
+        - 10.0.12.1/31
+        - 10.0.12.0/31
       as:
-        - '65216'
-        - '64992'
+        - '65116'
+        - '64991'
       include_in_underlay_protocol: true
       mtu: '9214'
       raw_eos_cli: 'sflow enable'
-    - nodes: [ ENT-DC2-EDGE2, ENT-DC2-CORE1 ]
+    - nodes: [ ENT-DC1-EDGE2, ENT-DC1-CORE1 ]
       interfaces:
         - Ethernet51/1
         - Ethernet52/1
       ip:
-        - 10.0.21.3/31
-        - 10.0.21.2/31
+        - 10.0.11.3/31
+        - 10.0.11.2/31
       as:
-        - '65216'
-        - '64992'
+        - '65116'
+        - '64991'
       include_in_underlay_protocol: true
       mtu: '9214'
       raw_eos_cli: 'sflow enable'
-    - nodes: [ ENT-DC2-EDGE2, ENT-DC2-CORE2 ]
+    - nodes: [ ENT-DC1-EDGE2, ENT-DC1-CORE2 ]
       interfaces:
         - Ethernet52/1
         - Ethernet52/1
       ip:
-        - 10.0.22.3/31
-        - 10.0.22.2/31
+        - 10.0.12.3/31
+        - 10.0.12.2/31
       as:
-        - '65216'
-        - '64992'
+        - '65116'
+        - '64991'
       include_in_underlay_protocol: true
       mtu: '9214'
       raw_eos_cli: 'sflow enable'
